--- a/argocd/argocd/deploment.yaml
+++ b/argocd/argocd/deploment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: spark-pi
-        image: apache/spark:scala
+        image: tushardighe/spark-pi:latest
         ports:
         - containerPort: 4040  # Assuming this is the port your Spark application exposes
