--- a/argocd/deployment.yaml
+++ b/argocd/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: spark-pi
-        image: tushardighe/spark-pi:latest
+        image: tushardighe/spark-pi:v1
         ports:
         - containerPort: 4040  # Assuming this is the port your Spark application exposes
