--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,16 +18,19 @@ jobs:
 
     - name: Log in to Docker Hub
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+    - name: Get short Git commit ID
+      id: vars
+      run: echo "::set-output name=commit_id::$(git rev-parse --short HEAD)"
       
     - name: Build and push Docker image
       uses: docker/build-push-action@v2
-      
       with:
         context: .
         file: ./Dockerfile
         platforms: linux/amd64
         push: true
-        tags: tushardighe/spark-pi:v2
+        tags: tushardighe/spark-pi:${{ steps.vars.outputs.commit_id }}
       env:
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
